--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 
-.cabecalho{
+*{ margin: 0;
+    padding: 0;
+    box-sizing: border-box ;
+    text-decoration: none;
+
+}
+
+body{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+
+}
+
+#cabecalho{
     margin-block-end: auto;
     background-color: rgb(150, 95, 95);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -8,7 +23,7 @@
 flex-direction: row;
 align-items: center;
 justify-content: space-around;
-font-size: 40px;
+font-size: 100px;
 padding: 20px;
 margin-bottom: 20px;
 margin-top: 1px;
@@ -18,13 +33,22 @@ margin-top: 1px;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    font-size: 32px;
-    padding: 20px;
+    font-size: 28px;
     margin-bottom: 20px;
-    margin-top: 1px;
+    margin-top: 20px;
+    page-break-after: auto;
 
 
+}
 
+.botao{
+    display: flex;
+    gap: 32px;
+    }
 
-
+.item-botao:hover{ 
+background-color: rgb(169, 169, 179);    
+border: none;
+box-shadow: 4px 5px 4px rgb(17, 25, 41);
+border-radius: 20px;
 }
